@@ -1,3 +1,7 @@
+Wed Jul 16 19:51:56 EST 2008  <baueran@gmail.com>
+
+- src/gutils: fixed bug mentioned in previous commit message.
+
 Wed Jul 16 19:37:39 EST 2008  <baueran@gmail.com>
 
 - src/gutils: documented bug for has_path in inline documentation, but did
